# little-brother-v3

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
Docs/: dry run.txt  run --dry-run --duration 10.txt
lb3/: __init__.py  __main__.py  cli.py  config.py  database.py  db.py  event_bus.py  events.py  hashutil.py  ids.py  importer.py  logging_setup.py  migrations.py  quiescence_scheduler.py  recovery.py  spool.py  spool_quota.py  spooler.py  supervisor.py  types.py  version.py
lb3/ai/: __init__.py  advice.py  digest.py  focus.py  input_hash.py  lock.py  metrics.py  reconcile.py  report.py  run.py  summarise.py  summarise_days.py  tick.py  timeutils.py
lb3/monitors/: __init__.py  active_window.py  base.py  browser.py  context_snapshot.py  filewatch.py  heartbeat.py  keyboard.py  mouse.py
lb3/plugins/: __init__.py  browser_cdp.py  vscode_text_stub.py
lb3/utils/: scheduler.py
scripts/: human_acceptance.py  smoke_release.py
tests/: __init__.py
tests/ai/: __init__.py  test_advice.py  test_daily_summary.py  test_digest.py  test_hourly_summary.py  test_lock.py  test_metrics.py  test_reconcile.py  test_reports.py  test_run.py  test_tick.py  test_time_and_hash.py
tests/helpers/: __init__.py  keyboard_harness.py
tests/integration/: __init__.py  test_active_window_integration.py  test_browser_integration.py  test_cli_run.py  test_cli_run_integration.py  test_config_cli.py  test_context_idle_gap_integration.py  test_context_snapshot_flush.py  test_context_snapshot_integration.py  test_crash_recovery_integration.py  test_database_cli.py  test_filewatch_integration.py  test_importer_integration.py  test_importer_trim_policy.py  test_keyboard_integration.py  test_mouse_integration.py  test_quota_end_to_end.py  test_quota_integration.py  test_spool_import_integration.py  test_spooler_integration.py
tests/unit/: __init__.py  test_active_window.py  test_browser.py  test_cli_cleanup.py  test_cli_diag.py  test_cli_help.py  test_cli_status_json.py  test_config.py  test_context_idle_gap_robust.py  test_context_snapshot.py  test_database.py  test_database_upsert_file_record.py  test_events.py  test_filewatch.py  test_filewatch_db_api.py  test_hashutil.py  test_hashutil_url.py  test_ids.py  test_importer.py  test_importer_filtering.py  test_imports.py  test_keyboard.py  test_logging_levels.py  test_logging_log_once.py  test_logging_setup.py  test_monitor_base.py  test_mouse.py  test_packaging.py  test_quota_basic.py  test_readme_sanity.py  test_recovery.py  test_spool_backpressure.py  test_spool_quota_accounting.py  test_spool_quota_backpressure.py  test_spool_quota_cli.py  test_spooler.py  test_status_diag_spool_json.py  test_supervisor.py  test_version.py  test_version_cli.py
